...
                    style="?attr/textInputOutlinedDenseStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_or_phone_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="true"
                        android:inputType="text|textEmailAddress"
                        android:singleLine="true" />
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/login_button_main"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:enabled="@{allowAccountLogin}"
                            android:fontFamily="@font/nunito_medium"
                            android:onClick="onClickLoginButton"
...
